--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -1,23 +1,15 @@
-<html>
-	<head>
-		<title>About us
-		</title>
-	</head>
-	<body>
-		<div class="col-md-6 col-md-offset-3 well">
-			<div>
-				<h1 class="text-center">About Big Talker</h1>
-				<br>
-				<p>Big Talker is a trusted marketplace for onsite workshops.   Find your team's next inspiring guest speaker or fantastic team building exercise.   Check community generated reviews and ratings to find the next life-changing talk for your team.</p>
-				<p>Contact us at <a href="mailto:workshoply@gmail.com?Subject=Hello" target="_top">workshoply@gmail.com</a></p>
-				<p>Big Talker is currently in Beta.  Our Beta program focuses on soft-skill /leadership talks in San Francisco only.</p>
-			</div>
+<div class="container" id="about">
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 well">
+			<h1 class="text-center">About Big Talker</h1>
+			<h4>Big Talker is a trusted marketplace for onsite workshops.   Find your team's next inspiring guest speaker or fantastic team building exercise.   Check community generated reviews and ratings to find the next life-changing talk for your team.</h4>
+			<h4>Contact us at <a href="mailto:workshoply@gmail.com?Subject=Hello" target="_top">workshoply@gmail.com</a></h4>
+			<h4>Big Talker is currently in Beta.  Our Beta program focuses on soft-skill /leadership talks in San Francisco only.</h4>
 			<div class="text-center">
 				<img src="http://geekadelphia.com/wp-content/uploads/2012/11/gen-assembly.jpg" class="img-responsive" alt="workshop photo">
-			</div><br>
-			<div class="text-center">
-				<p>Built with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by a web development immersive (WDI) team from <a href="https://generalassemb.ly/">General Assembly</a> San Francisco</p>
+				<p class="small about-footer">Built with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by Web Development Immersive Team
+				<br><a href="https://generalassemb.ly/san-francisco" target="_blank">General Assembly</a> - San Francisco</p>
 			</div>
 		</div>
-	</body>
-</html>
+	</div>
+</div>
