set min-height for feature workshop, remove unneeded code in sites#index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -222,6 +222,12 @@ footer {
 
 .workshop-container {
  	margin: 0 50px;
+  .thumbnail.featured-workshop {
+    min-height: 550px;
+    h3 {
+      font-size: 22px;
+    }
+  }
  }
 
 .info-container {
