--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -1,94 +1,111 @@
 <div class="container">
 	<div class="container-fluid">
 		<div class="row">
+
 			<div class="col-xs-12 col-md-9">
 				<div class="workshop-box center-block">
-<!-- 					<div class="gap-40px"></div> -->
 					<%= image_tag @workshop.image.url(:medium), class: "img-responsive workshop-img" %>
 					<% if current_user == @workshop.user %>
-					<div class="edit-delete-workshop-btn-wrapper">
-						<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary edit-workshop-btn" do %>
-						<%= fa_icon "pencil-square-o " %>
-						<% end %>
-						<%= link_to @workshop, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger delete-workshop-btn" do %>
-						<%= fa_icon "trash-o " %>
-						<% end %>
-					</div>
+						<div class="edit-delete-workshop-btn-wrapper">
+							<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary edit-workshop-btn" do %>
+								<%= fa_icon "pencil-square-o " %>
+							<% end %>
+							<%= link_to @workshop, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger delete-workshop-btn" do %>
+								<%= fa_icon "trash-o " %>
+							<% end %>
+						</div>
 					<% end %>
-					<h1><%= @workshop.title.titleize %></h1>
+					<h2><%= @workshop.title.titleize %></h2>
+
 					<div class="container">
 						<h3>Speaker: <%= @workshop.user.full_name.titleize %></h3>
 						<div id="workshop-description">
-						<p><%= @workshop.description %></p>
+							<p><%= @workshop.description %></p>
 						</div>
 						<div class="col-md-9 center-block">
 							<%= link_to "MESSAGE", new_conversation_path, class: "btn btn-danger" %>
 						</div>
 					</div>
 
-						<div class="col-md-3">
-							<div id="rating-box">
+					<div class="col-md-3">
+						<div id="rating-box">
 							<div class="row">
 								<div class="small-2 large-4 columns">
 									<% if current_user %>
-									Rate Workshop: <%= rating_for @workshop, "rating", disable_after_rate: false, enable_half: true, half_show: true, path: 'cancel_on'%>
-									<div id="hintDiv"></div
+										Rate Workshop: <%= rating_for @workshop, "rating", disable_after_rate: false, enable_half: true, half_show: true, path: 'cancel_on'%>
+										<div id="hintDiv"></div>
 									<% end %>
 								</div>
-							</div>
-							</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			<!-- this part will be replace with @workshop.user.about later >>> Trung -->
-			<!-- add user.first_name + user.last_name -->
-			<!-- add user.location  -->
-			<!-- add user.first_name + user.last_name -->
-<div class="container">
-		<div class="row">
-				<div class="span4">
-					<h3>About the Speaker</h3>
-					<img src="https://s3.amazonaws.com/uifaces/faces/twitter/brynn/128.jpg"/>
-					<div class="content-heading"><h4>Jane Doe</h4></div>
-					<p>San Francisco, CA</p>
-					<p>Jane Doe is the Bay Area's leading expert on unconcious bias in the workplace.</p>
+			</div>
+
+			<div class="container">
+				<div class="row">
+					<div class="span4">
+						<h3>About the Speaker</h3>
+						<%= image_tag(@workshop.user.avatar.url(:thumb), style: "height: 100px") %>
+						<div class="content-heading"><h4><%= @workshop.user.full_name.titleize %></h4></div>
+						<p><%= @workshop.user.location.titleize %></p>
+						<p><%= @workshop.user.bio %></p>
+					</div>
+				</div><br>
+			</div>
+
+			<!-- Reviews -->
+			<div class="container">
+
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<button type="button" class="btn btn-primary btn-review" data-toggle="modal" data-target="#myModal">
+						  <%= fa_icon "star" %>	Write Review
+						</button>
+					</div>
 				</div>
-			</div><br>
+
+				<% if @workshop.reviews.count > 0 %>
+					<% @workshop.reviews.each do |review| %>
+						<div class="row">
+							<div class="span4 review-box">
+								<div class="workshop-index-speaker clearfix">
+									<%= link_to image_tag(review.user.avatar.url(:thumb)), user_path(review.user), class: "tiny-thumb" %>
+									<span>
+										<h4 class="speaker-name-link"><%= review.user.full_name.titleize %></h4>
+										<p><%= review.text %></p>
+									</span>
+								</div>
+							</div>
+						</div>
+					<% end %>
+				<% end %>
+
+			</div>
+			
 		</div>
+	</div>
+</div>
 
-
-
-<!-- Reviews -->
-<div class="container">
-<div class="row">
-	<div class="col-md-12 text-center">
-		<div class="btn btn-primary btn-review">Write a Review</div>
-	</div>
-</div>
-<div class="row">
-	<div class="span4 review-box">
-		<img style="float:left;clear:left" src="https://s3.amazonaws.com/uifaces/faces/twitter/mattsince87/128.jpg"/>
-		<div class="content-heading">
-			<h4>Brian Jones</h4> <!--this will be User.first_name -->
-		</div>
-		<p>This is a review. This is a review. This is a review. This is a review.</p>
-	</div>
-</div>
-<div class="row">
-	<div class="span4 review-box">
-		<img style="float:left;clear:left" src="https://s3.amazonaws.com/uifaces/faces/twitter/erondu/128.jpg"/>
-		<div class="content-heading"><h4>Adam Smith</h4></div>
-		<p>This is a review. This is a review. This is a review. This is a review.</p>
-	</div>
-</div>
-<div class="row">
-	<div class="span4 review-box">
-		<img style="float:left;clear:left" src="https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg"/>
-		<div class="content-heading"><h4>Kelly Anderson</h4></div>
-		<p>This is a review. This is a review. This is a review. This is a review.</p>
-	</div>
-</div>
-</div>
-</div>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    	<%= form_for [@workshop, @review] do |f| %>
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	        <h4 class="modal-title small" id="myModalLabel">Write Review</h4>
+	      </div>
+	      <div class="modal-body">
+	      	<%= f.label :text, "Your review:" %>
+	        <%= f.text_area :text, class: "form-control", rows: "5" %>
+	      </div>
+	      <div class="modal-footer">
+	      	<button type="submit" class="btn btn-primary">Submit</button>
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	      </div>
+	    <% end %>
+    </div>
+  </div>
 </div>
