--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,9 @@
     </div>
     <!-- end Devise Flash MSG -->
 
-    <%= yield %>
+    <div class="yield-wrapper">
+      <%= yield %>
+    </div>
   </div>
 
   <footer class="text-center">
