--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -23,7 +23,7 @@
 							<p><%= @workshop.description %></p>
 						</div>
 						<div class="col-md-9 center-block">
-							<%= link_to "MESSAGE", new_conversation_path, class: "btn btn-danger" %>
+							<%= link_to "MESSAGE", new_conversation_path, class: "btn btn-primary" %>
 						</div>
 					</div>
 
@@ -59,7 +59,7 @@
 
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<button type="button" class="btn btn-primary btn-review" data-toggle="modal" data-target="#myModal">
+						<button type="button" class="btn btn-danger btn-review" data-toggle="modal" data-target="#myModal">
 						  <%= fa_icon "star" %>	Write Review
 						</button>
 					</div>
@@ -92,7 +92,7 @@
     <div class="modal-content">
     	<%= form_for [@workshop, @review] do |f| %>
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <button type="button" class="close cancel-review" data-dismiss="modal" aria-label="Close">
 	          <span aria-hidden="true">&times;</span>
 	        </button>
 	        <h4 class="modal-title small" id="myModalLabel">Write Review</h4>
@@ -103,7 +103,7 @@
 	      </div>
 	      <div class="modal-footer">
 	      	<button type="submit" class="btn btn-primary">Submit</button>
-	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-secondary cancel-review" data-dismiss="modal">Close</button>
 	      </div>
 	    <% end %>
     </div>
