--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -23,7 +23,9 @@
 							<p><%= @workshop.description %></p>
 						</div>
 						<div class="col-md-9 center-block">
-							<%= link_to "MESSAGE", new_conversation_path, class: "btn btn-primary" %>
+							<% if !current_user or current_user != @workshop.user %>
+								<%= link_to "MESSAGE", new_conversation_path, class: "btn btn-primary" %>
+							<% end %>
 						</div>
 					</div>
 
@@ -31,10 +33,7 @@
 						<div id="rating-box">
 							<div class="row">
 								<div class="small-2 large-4 columns">
-									<% if current_user %>
-										Rate Workshop: <%= rating_for @workshop, "rating", disable_after_rate: false, enable_half: true, half_show: true, path: 'cancel_on'%>
-										<div id="hintDiv"></div>
-									<% end %>
+									Overall Rating: <%= rating_for @workshop, "rating", disabled: true, readonly: true %>
 								</div>
 							</div>
 						</div>
@@ -59,9 +58,7 @@
 
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<button type="button" class="btn btn-danger btn-review" data-toggle="modal" data-target="#myModal">
-						  <%= fa_icon "star" %>	Write Review
-						</button>
+						<%= link_to "Write a Review", new_workshop_review_path(@workshop), class: "btn btn-danger btn-review" %>
 					</div>
 				</div>
 
@@ -85,27 +82,4 @@
 			
 		</div>
 	</div>
-</div>
-
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-    	<%= form_for [@workshop, @review] do |f| %>
-	      <div class="modal-header">
-	        <button type="button" class="close cancel-review" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">&times;</span>
-	        </button>
-	        <h4 class="modal-title small" id="myModalLabel">Write Review</h4>
-	      </div>
-	      <div class="modal-body">
-	      	<%= f.label :text, "Your review:" %>
-	        <%= f.text_area :text, class: "form-control", rows: "5" %>
-	      </div>
-	      <div class="modal-footer">
-	      	<button type="submit" class="btn btn-primary">Submit</button>
-	        <button type="button" class="btn btn-secondary cancel-review" data-dismiss="modal">Close</button>
-	      </div>
-	    <% end %>
-    </div>
-  </div>
 </div>
