--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -16,9 +16,10 @@
 		</div>
 	</div>
 	<div class="review-form-wrapper">
+		<% if current_user and @current_user.review %>
 		<%= form_for [@workshop, @review] do |f| %>
     	<div class="rate-wrapper">
-    		Rate Workshop: <%= rating_for @workshop, "rating", disable_after_rate: false, cancel: false %>
+    		Rate Workshop: <%= rating_for_user @workshop, current_user, "rating", disable_after_rate: false, cancel: false %>
     	</div>
     	<div class="field">
     		<%= f.label :text, "Your review:" %>
