links speaker to new conversation views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,7 +26,8 @@
  @import "sites";  // for css in sites.css
  @import "users"; // for css in users.css
  @import "workshops"; // for css in workshops.css
-
+ @import "conversations"; // for css in conversations.css
+ @import "mailbox"; // for css in mailbox.css
 
 html, body {
   height: 100%;
