--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="spacer"></div>
   <div class="col-md-12">
@@ -25,4 +26,5 @@
     </div>
   </div>
 
+</div>
 </div>
