--- a/app/assets/stylesheets/mailbox.scss
+++ b/app/assets/stylesheets/mailbox.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the mailbox controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.btn-success {
+	margin-bottom: 10px;
+	margin-left: 10px;
+}
