user messaging logic

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,8 +36,10 @@
 			<div>
 				<% if !current_user or current_user != @user %>
 					<div class="col-md-9 center-block">
-							<%= link_to "MESSAGE", new_conversation_path, class: "btn btn-danger" %>
+							<%= link_to "MESSAGE", new_conversation_path(speaker:@user), class: "btn btn-danger" %>
 						</div>
+
+
 		<% else %>
 					<%= link_to "Edit Profile", edit_user_path(current_user), class: "btn btn-default" %> 
 					<%= link_to "Change Password", edit_user_password_registration_path(current_user), class: "btn btn-default"  %>
