adds contact form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -238,8 +238,8 @@ footer {
   }
  }
 
-.info-container {
- 	background-color: #e9e9e9;
+.contact-container {
+ 	background-color: #ff5d4e;
  }
 
 .modal-dialog h4{
@@ -258,28 +258,10 @@ footer {
     margin: 20px auto;
 }
 
-/* Five Star rating button */
-// .rating {
-//   unicode-bidi: bidi-override;
-//   direction: rtl;
-//   float: left;
-// }
-// .rating > span {
-//   display: inline-block;
-//   position: relative;
-//   width: 1.1em;
-// }
-// .rating > span:hover:before,
-// .rating > span:hover ~ span:before {
-//    content: "\2605";
-//    position: absolute;
-//    cursor: pointer;
-// }
-
-// .btn-rate {
-//   margin:10px 0 0 20px;
-// }
-/* End Five Star rating button */
+#contact-form{
+  float: right;
+  margin-right:5%;
+}
 
 #reviews-box {
     height: 120px;
