--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -1,108 +1,106 @@
-<div class="container">
-	<div class="container-fluid">
-		<div class="row">
-
-			<div class="col-xs-12 col-md-9">
-				<div class="workshop-box center-block">
-					<%= image_tag @workshop.image.url(:medium), class: "img-responsive workshop-img" %>
-					<% if current_user == @workshop.user %>
-						<div class="edit-delete-workshop-btn-wrapper">
-							<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary edit-workshop-btn" do %>
-								<%= fa_icon "pencil-square-o " %>
-							<% end %>
-							<%= link_to @workshop, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger delete-workshop-btn" do %>
-								<%= fa_icon "trash-o " %>
+<div class="container workshop-show">
+	<div class="row workshop-info">
+		<div class="col-md-9">
+			<div class="workshop-box center-block">
+				<%= image_tag @workshop.image.url(:medium), class: "img-responsive workshop-img" %>
+				<% if current_user == @workshop.user %>
+					<div class="edit-delete-workshop-btn-wrapper">
+						<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary edit-workshop-btn" do %>
+							<%= fa_icon "pencil-square-o " %>
+						<% end %>
+						<%= link_to @workshop, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger delete-workshop-btn" do %>
+							<%= fa_icon "trash-o " %>
+						<% end %>
+					</div>
+				<% end %>
+				<h2><%= @workshop.title.titleize %></h2>
+				<h4>
+					<span class="h4-big">Topic: <%= @workshop.topic.name.titleize %></span><br class="br-big">
+					Location: <%= @workshop.location.titleize %><br>
+					Speaker:<%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %>
+					</h4>
+				<div class="row clearfix overall-rating-wrapper">
+					<div class="col-sm-7">
+						<div id="rating-box">
+							<div class="small-2 large-4 columns">
+								Overall Rating: <%= rating_for @workshop, "rating", disabled: true, readonly: true %>
+							</div>
+						</div>
+					</div>
+					<% if !@current_user_review %>
+						<div class="col-sm-5 review-btn-wrapper">
+							<%= link_to new_workshop_review_path(@workshop), class: "btn btn-danger btn-review" do %>
+								<%= fa_icon('star') %> Write a Review
 							<% end %>
 						</div>
 					<% end %>
-					<h2><%= @workshop.title.titleize %></h2>
-
-					<div class="container">
-						<h4>Speaker:<%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %></h4>
-						<div id="workshop-description">
-							<p><%= @workshop.description %></p>
-						</div>
-						<div class="col-md-9 center-block">
-							<% if !current_user or current_user != @workshop.user %>
-								<%= link_to "MESSAGE", new_conversation_path(workshop: @workshop), class: "btn btn-primary" %>
-							<% end %>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div id="rating-box">
-							<div class="row">
-								<div class="small-2 large-4 columns">
-									Overall Rating: <%= rating_for @workshop, "rating", disabled: true, readonly: true %>
-								</div>
-							</div>
-						</div>
-					</div>
+				</div>
+				<div id="workshop-description">
+					<p><%= simple_format(@workshop.description) %></p>
 				</div>
 			</div>
+		</div>
 
-			<div class="container">
-				<div class="row">
-					<div class="span4">
-						<h3>About the Speaker</h3>
-						<%= image_tag(@workshop.user.avatar.url(:thumb), style: "height: 100px") %>
-						<div class="content-heading"><h4><%= @workshop.user.full_name.titleize %></h4></div>
-						<p><%= @workshop.user.location.titleize %></p>
-						<p><%= @workshop.user.bio %></p>
+		<div class="col-md-3">
+			<div class="span4">
+				<h3>About the Speaker</h3>
+				<%= image_tag(@workshop.user.avatar.url(:thumb), style: "height: 100px") %>
+				<h4>
+					<%= @workshop.user.full_name.titleize %><br>
+					<%= @workshop.user.location.titleize %>
+				</h4>
+				<% if !current_user or current_user != @workshop.user %>
+					<div class="msg-btn-wrapper">
+						<%= link_to "MESSAGE", new_conversation_path(workshop: @workshop), class: "btn btn-primary msg-btn" %>
 					</div>
-				</div><br>
-			</div>
-
-			<!-- Reviews -->
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<%= link_to "Write a Review", new_workshop_review_path(@workshop), class: "btn btn-danger btn-review" %>
-					</div>
-				</div>
-
-				<% if @current_user_review %>
-					<h4>Your review:</h4>
-					<div class="row review-container">
-						<div class="span4 review-box">
-							<div class="workshop-index-speaker clearfix">
-								<%= link_to image_tag(@current_user_review.user.avatar.url(:thumb)), user_path(@current_user_review.user), class: "tiny-thumb" %>
-								<span>
-									<h4 class="speaker-name-link"><%= @current_user_review.user.full_name.titleize %>
-										<div class="user-rating-wrapper">
-											<%= rating_for_user @workshop, @current_user_review.user, "rating", disabled: true, readonly: true %>
-										</div>										
-									</h4>
-									<%= link_to "Edit", edit_workshop_review_path(@workshop, @current_user_review) %>
-									<%= link_to "Delete", workshop_review_path(@workshop, @current_user_review), method: :delete, data: {confirm: "Are you sure?"} %>
-								</span>
-							</div>
-							<p><%= @current_user_review.text %></p>
-						</div>
-					</div>
-					<hr>
 				<% end %>
+				<p class="speaker-bio"><%= simple_format(@workshop.user.bio) %></p>
+			</div>
+		</div>
+	</div>
 
+	<div class="row">
+		<div class="col-md-12">
+			<% if @current_user_review %>
+				<h4>Your review:</h4>
+				<div class="review-container">
+					<div class="workshop-index-speaker clearfix">
+						<%= link_to image_tag(@current_user_review.user.avatar.url(:thumb)), user_path(@current_user_review.user), class: "tiny-thumb" %>
+						<span>
+							<h4 class="speaker-name-link"><%= @current_user_review.user.full_name.titleize %>
+								<div class="user-rating-wrapper">
+									<%= rating_for_user @workshop, @current_user_review.user, "rating", disabled: true, readonly: true %>
+								</div>										
+							</h4>
+							<%= link_to "Edit", edit_workshop_review_path(@workshop, @current_user_review) %>
+							<%= link_to "Delete", workshop_review_path(@workshop, @current_user_review), method: :delete, data: {confirm: "Are you sure?"} %>
+						</span>
+					</div>
+					<p><%= simple_format(@current_user_review.text) %></p>
+				</div>
+			<% end %>
+			<% if @reviews.count > 0 %>
+				<hr>
+				<h2>Users' Reviews</h2>
 				<% @reviews.each do |review| %>
-					<div class="row review-container">
-						<div class="span4 review-box">
-							<div class="workshop-index-speaker clearfix">
-								<%= link_to image_tag(review.user.avatar.url(:thumb)), user_path(review.user), class: "tiny-thumb" %>
-								<span>
-									<h4 class="speaker-name-link"><%= review.user.full_name.titleize %>
-										<br>
-										<div class="user-rating-wrapper">
-											<%= rating_for_user @workshop, review.user, "rating", disabled: true, readonly: true %>
-										</div>
-									</h4>
-									<%= time_ago_in_words(review.created_at) %> ago
-								</span>
-							</div>
-							<p><%= review.text %></p>
+					<div class="review-container">
+						<div class="workshop-index-speaker clearfix">
+							<%= link_to image_tag(review.user.avatar.url(:thumb)), user_path(review.user), class: "tiny-thumb" %>
+							<span>
+								<h4 class="speaker-name-link"><%= review.user.full_name.titleize %>
+									<br>
+									<div class="user-rating-wrapper">
+										<%= rating_for_user @workshop, review.user, "rating", disabled: true, readonly: true %>
+									</div>
+								</h4>
+								<%= time_ago_in_words(review.created_at) %> ago
+							</span>
 						</div>
+						<p><%= simple_format(review.text) %></p>
 					</div>
+					<hr class="hr-medium">
 				<% end %>
-			</div>
-			
+			<% end %>
 		</div>
 	</div>
 </div>
