--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -61,14 +61,14 @@
             <div class="col-sm-10 col-md-6">
                 <div class="form-group">
                     <label for="form_name">First Name</label>
-                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your first name" required="required" data-error="Firstname is required.">
+                    <input id="form_name" type="text" name="name" class="form-control" placeholder="First name" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-sm-10 col-md-6">
                 <div class="form-group">
                     <label for="form_lastname">Last Name</label>
-                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your last name" required="required" data-error="Lastname is required.">
+                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Last name" required="required" data-error="Lastname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
             <div class="col-sm-10 col-md-6">
                 <div class="form-group">
                     <label for="form_email">Email</label>
-                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email" required="required" data-error="Valid email is required.">
+                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Ex. jessicajones@gmail.com" required="required" data-error="Valid email is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
