updated about us section

--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -2,12 +2,12 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2 well">
 			<h1 class="text-center">About Big Talker</h1>
-			<h4>Big Talker is a trusted marketplace for onsite workshops.   Find your team's next inspiring guest speaker or fantastic team building exercise.   Check community generated reviews and ratings to find the next life-changing talk for your team.</h4>
-			<h4>Contact us at <a href="mailto:workshoply@gmail.com?Subject=Hello" target="_top">workshoply@gmail.com</a></h4>
-			<h4>Big Talker is currently in Beta.  Our Beta program focuses on soft-skill /leadership talks in San Francisco only.</h4>
+			<h4>Big Talker is a trusted marketplace for onsite guest speakers and workshops.   Find your team's next inspiring guest speaker or team building exercise.   Check community generated reviews and ratings to find the next career-enhancing talk for your team.</h4>
+			<p>Interested in posting a talk or finding a talk that's not listed? Contact us at <a href="mailto:hello.bigtalker@gmail.com?Subject=Hello" target="_top">hello.bigtalker@gmail.com</a></p>
+			<p>Big Talker is currently in Beta.</p>
 			<div class="text-center">
 				<img src="http://geekadelphia.com/wp-content/uploads/2012/11/gen-assembly.jpg" class="img-responsive" alt="workshop photo">
-				<p class="small about-footer">Built with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by Web Development Immersive Team
+				<p class="small about-footer">Built with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by a Web Development Immersive (WDI) team
 				<br><a href="https://generalassemb.ly/san-francisco" target="_blank">General Assembly</a> - San Francisco</p>
 			</div>
 		</div>
