adds font awesome gem, contact page layout

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,7 @@
  @import "workshops"; // for css in workshops.css
  @import "conversations"; // for css in conversations.css
  @import "mailbox"; // for css in mailbox.css
+ @import "font-awesome"; // font-awesome icon support
 
 html, body {
   height: 100%;
