adds layout to contact page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -437,3 +437,8 @@ ul.dropdown-menu{
 }
 
 .lt-ie9 .search input { line-height: 26px }
+
+.contact-form-wrap {
+    padding: 30px;
+    background: #fde26c;
+}
