--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
             <ul class="nav navbar-nav navbar-left">
               <li><a href="/about">About</a></li>
               <li><%= link_to "Talks", workshops_path %></li>
+              <li><%= link_to "Contact", contact_path %></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <% if current_user %>
