--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -49,7 +49,7 @@
 	<div class="row">
 		<div class="col-sm-12">
 		<div class="text-center">
-				<%= link_to "Contact Us", contact_path, class:"btn btn-primary" %>
+				<%= link_to "Contact Us", contact_path, class:"btn btn-primary", id: "btn-contact" %>
 			</div>
 		</div>
 	</div>
