adds navbar contact button and changes input style

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -457,6 +457,10 @@ ul.dropdown-menu{
 .field input {
     width: 40%;
     height: 40px;
+    border-radius: 3px;
+    border:none;
+    font-size: 24px;
+
 }
 #message-label input {
   width: 50%;
