contact styling and changes default email address

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -462,6 +462,15 @@ ul.dropdown-menu{
     font-size: 24px;
 
 }
-#message-label input {
-  width: 50%;
+textarea  {
+  width: 40%;
+  height: 110px;
+}
+
+.icons {
+  margin-top:20px;
+}
+
+.icons p, a{
+  font-size:18px;
 }
