--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -3,17 +3,17 @@
 		<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
 	<h1>CONTACT US</h1>
 		<h3>Questions? Comments? We would love to hear from you.</h3>
-		<div class="col-md-4">
+		<div class="col-md-4 icons">
 		<%= fa_icon "envelope-o 3x" %>
 		<h4>EMAIL</h4>
 		<%= mail_to "hello.bigtalker@gmail.com" %>
 	</div>
-		<div class="col-md-4">
+		<div class="col-md-4 icons">
 		<%= fa_icon "map-marker 3x" %>
 		<h4>LOCATION</h4>
 		<p>San Francisco, CA</p>
 	</div>
-		<div class="col-md-4">
+		<div class="col-md-4 icons">
 		<%= fa_icon "mobile 3x" %>
 			<h4>PHONE</h4>
 			<p>123-456-7890</p>
