--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -24,7 +24,7 @@
 <div class="row">
 		<div class="contact-form-wrap text-center">
 	<h3>Or Send Us a Message</h3>
-		<%= form_for @message, :html => { :style => 'background-color:#fde26c;' } do |f| %>
+		<%= form_for @message, :html => { :style => 'background-color:#e84e4a;' } do |f| %>
   	<% if @message.errors.any? %>
     	<div id="error_explanation">
       	<h2>
